--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "yarn build"
   },
   "files": ["dist"],
   "lint-staged": {
