--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "prepublish": "yarn build",
+    "prepublish":
+      "yarn lint && yarn build && yarn release && git push --follow-tags origin master",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "yarn build"
+    "pretest": "yarn build",
+    "lint": "eslint --ext .js,.jsx .",
+    "release": "standard-release"
   },
   "files": ["dist"],
   "lint-staged": {
@@ -31,21 +34,22 @@
     "extends": ["airbnb-base", "prettier"]
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.11.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.7.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
-    "lint-staged": "^5.0.0",
-    "prettier": "^1.8.2",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-babel-minify": "^3.1.2",
-    "rollup-plugin-replace": "^2.0.0"
+    "lint-staged": "^7.1.2",
+    "prettier": "^1.12.1",
+    "rollup": "^0.59.3",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel-minify": "^5.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "standard-version": "^4.4.0"
   },
   "dependencies": {}
 }
