--- a/package.json
+++ b/package.json
@@ -1,61 +1,50 @@
 {
   "name": "@tracktl/redux-promise-middleware",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "license": "MIT",
-  "author": "Tracktl <﻿dev@tracktl.com> (https://app.tracktl.com/)",
+  "author": "Tracktl <dev@tracktl.com> (https://app.tracktl.com/)",
   "repository": "git@github.com:Tracktl/redux-promise-middleware.git",
   "homepage": "https://github.com/Tracktl/redux-promise-middleware#readme",
   "bugs": {
     "url": "https://github.com/Tracktl/redux-promise-middleware/issues"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "umd:main": "dist/redux-promise-middleware.umd.production.js",
+  "module": "dist/redux-promise-middleware.esm.js",
+  "typings": "dist/index.d.ts",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "prepare": "yarn build",
-    "precommit": "lint-staged",
-    "prepublishOnly": "yarn release && git push --follow-tags origin master",
+    "start": "tsdx watch",
+    "build": "tsdx build --format=cjs,esm,umd",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
     "release": "standard-version",
-    "pretest": "yarn build",
-    "test": "node test/test.js",
-    "dev": "rollup -c -w",
-    "build": "rollup -c",
-    "lint": "eslint --ext .js,.jsx ."
+    "prepublishOnly": "yarn build && yarn release && git push --follow-tags origin master"
   },
-  "files": ["dist"],
-  "standard-version": {
-    "scripts": {
-      "prerelease": "yarn lint",
-      "postbump": "prettier --write package.json"
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
     }
   },
-  "lint-staged": {
-    "{*.{js,json},.babelrc}": ["prettier --write", "git add"],
-    "src/**/*.{js,jsx}": ["eslint --fix --max-warnings 0", "git add"]
-  },
   "prettier": {
+    "printWidth": 80,
+    "semi": true,
     "trailingComma": "all",
     "singleQuote": true
   },
-  "eslintConfig": {
-    "plugins": ["prettier"],
-    "extends": ["airbnb-base", "prettier"]
-  },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.2",
-    "prettier": "^1.12.1",
-    "rollup": "^0.59.3",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-babel-minify": "^5.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "standard-version": "^4.4.0"
+    "@types/jest": "^24.0.18",
+    "husky": "^3.0.5",
+    "prettier": "^1.18.2",
+    "redux": "^4.0.4",
+    "standard-version": "^7.0.0",
+    "tsdx": "^0.9.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.6.2"
   },
   "dependencies": {}
 }
