chore: remove pull request branches

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,13 +1,6 @@
 name: Pull request
 
-on:
-  pull_request:
-    branches:
-      - master
-      - next
-      - beta
-      - alpha
-      - /^\d+\.(\d+|x)(\.x)?$/
+on: pull_request
 
 jobs:
   test:
