--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,6 +1,12 @@
 name: Pull request
 
-on: pull_request
+on:
+  pull_request:
+    branches:
+      - master
+      - next
+      - beta
+      - alpha
 
 jobs:
   test:
