--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,6 +30,6 @@ jobs:
         run: yarn test --coverage
       - name: Publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn semantic-release
