--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,15 +9,17 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v2
+
       - name: Install node
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: 12
-      - name: Install dependencies
-        run: yarn
-      - name: Build
-        run: yarn build
+
+      - name: Install deps and build (with cache)
+        uses: bahmutov/npm-install@v1
+
       - name: Lint
         run: yarn lint
+
       - name: Test
-        run: yarn test --coverage
+        run: yarn test --ci --coverage
