--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,18 +19,21 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+
       - name: Install node
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: 12
-      - name: Install dependencies
-        run: yarn
-      - name: Build
-        run: yarn build
+
+      - name: Install deps and build (with cache)
+        uses: bahmutov/npm-install@v1
+
       - name: Lint
         run: yarn lint
+
       - name: Test
-        run: yarn test --coverage
+        run: yarn test --ci --coverage
+
       - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
