--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build --format=cjs,esm,umd",
     "test": "tsdx test",
     "lint": "tsdx lint",
+    "prepare": "tsdx build --format=cjs,esm,umd",
     "semantic-release": "semantic-release"
   },
   "peerDependencies": {},
@@ -45,9 +50,16 @@
     "husky": "4.3.8",
     "redux": "4.0.5",
     "semantic-release": "17.3.3",
-    "tsdx": "0.13.2",
-    "tslib": "2.0.3",
-    "typescript": "3.9.7"
+    "tsdx": "0.14.1",
+    "tslib": "2.1.0",
+    "typescript": "4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "4.13.0",
+    "**/@typescript-eslint/parser": "4.13.0",
+    "**/jest": "26.6.3",
+    "**/ts-jest": "26.4.4",
+    "**/typescript": "4.1.3"
+  }
 }
