--- a/package.json
+++ b/package.json
@@ -17,24 +17,15 @@
     "dist",
     "src"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build --format=cjs,esm,umd",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build --format=cjs,esm,umd",
+    "prepare": "tsdx build --format=cjs,esm,umd && husky install",
     "semantic-release": "semantic-release"
   },
   "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
@@ -42,24 +33,25 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@types/jest": "26.0.22",
-    "husky": "4.3.8",
-    "redux": "4.0.5",
-    "semantic-release": "17.4.2",
+    "@commitlint/cli": "16.1.0",
+    "@commitlint/config-conventional": "16.0.0",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@types/jest": "27.4.0",
+    "@types/node": "17.0.13",
+    "husky": "7.0.4",
+    "redux": "4.1.2",
+    "semantic-release": "19.0.2",
     "tsdx": "0.14.1",
-    "tslib": "2.2.0",
-    "typescript": "4.2.4"
+    "tslib": "2.3.1",
+    "typescript": "4.5.5"
   },
   "dependencies": {},
   "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "4.23.0",
-    "**/@typescript-eslint/parser": "4.23.0",
-    "**/jest": "26.6.3",
-    "**/ts-jest": "26.5.6",
-    "**/typescript": "4.2.4"
+    "**/@typescript-eslint/eslint-plugin": "5.10.1",
+    "**/@typescript-eslint/parser": "5.10.1",
+    "**/jest": "27.4.7",
+    "**/ts-jest": "27.1.3",
+    "**/typescript": "4.5.5"
   }
 }
